--- a/assets/css/AdminProduct.css
+++ b/assets/css/AdminProduct.css
@@ -153,7 +153,7 @@
     cursor: pointer;
     padding: 5px; 
 }
-
+/*
 .dropdown {
     position: relative;
     display: inline-block;
@@ -188,7 +188,7 @@
 
 .dropdown-content a:hover {
     background-color: #f1f1f1;
-}
+}*/
 
 /* nut cong tac */
 .switch {
@@ -322,19 +322,34 @@ input:checked + .slider:before {
     padding: 10px;
     
 }
-
-.pagination-container .page-btn {
-    border: 1px solid #E0E0E0;
-    background-color: #FCD5D5; /* Nền nút */
-    color: #333; /* Màu chữ đen */
+.page-btn {
     padding: 8px 15px;
-    margin: 0 5px;
-    cursor: pointer;
+    margin: 0 3px;
+    border: 1px solid #ddd;
     border-radius: 4px;
-    font-weight: bold;
-    transition: background-color 0.2s;
+    background-color: #f4f4f4;
+    cursor: pointer;
+    font-size: 0.95rem;
+    color: #333;
+    transition: background-color 0.2s, border-color 0.2s;
 }
-
+.page-btn:hover {
+    background-color: #e9e9e9;
+    border-color: #ccc;
+}
+.page-btn.active {
+    background-color: #34A8A6;
+    /* Màu xanh tương đồng với bảng */
+    color: white;
+    border-color: #34A8A6;
+    font-weight: bold;
+}
+/* CSS cho dấu '...' */
+.pagination-container span {
+    color: #555;
+    margin: 0 5px;
+    font-weight: bold;
+}
 .page-2-pagination {               /*an page product mac dinh*/
     display: none; 
 }
